# report-service

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile.template  README.md  docker-compose.yml  pyproject.toml
app/: .env.template  main.py
app/api/: __init__.py
app/api/v1/: __init__.py
app/api/v1/hosts/: crud.py  views.py
app/api/v1/responsible/: crud.py  views.py
app/core/: config.py
app/core/models/: __init__.py  db.py  host.py
app/utils/: __init__.py  auth.py  data.py  email.py
